# mici

./: .gitignore  Cargo.toml  README.md  minici.yml  plan.md
.github/workflows/: ci.yml
examples/commands/: deploy.yml  hello.yml
examples/unix/commands/: hello.yml
examples/unix/scripts/: greet.sh
examples/windows/commands/: hello.yml
examples/windows/scripts/: greet.ps1
rfc/: 001-idea.md  002-schema.md  003-help-and-maintenance.md
src/: cli.rs  main.rs
src/cli/: core.rs  mod.rs
src/cli/core/: base_command.rs  config_command.rs  edit_command.rs  fetch_command.rs  init_command.rs  list_command.rs  mod.rs  new_command.rs  validate_command.rs
src/cli/maintenance/: base_command.rs  config_command.rs  fetch_command.rs  init_command.rs  list_command.rs  mod.rs  new_command.rs  seed_command.rs
src/cli/schemas/: mod.rs  v1.rs  validation.rs
src/errors/: cli.rs  command.rs
src/lib/: mod.rs
src/lib/command/schemas/: v1.rs
src/lib/interfaces/: command.rs
src/lib/maintenance/: base_command.rs  init_cmd.rs  init_command.rs  mod.rs  seed_command.rs
src/runner/: context.rs  coordinator.rs  mod.rs  runner.rs
src/utils/: checks.rs  fs.rs  mod.rs  print.rs  resolver.rs  traits.rs  yaml.rs
templates/: general_help.hbs  individual_help.hbs
tests/: cli_basic.rs  cli_commands.rs  common.rs
tests/fixtures/: invalid_choice_no_options.yml  invalid_command.yml  invalid_duplicate_step_ids.yml  invalid_empty_type.yml  invalid_input_type.yml  invalid_multiple_errors.yml  invalid_options_on_string.yml  invalid_secret_on_bool.yml  invalid_step_command_and_script.yml  invalid_step_no_id.yml  invalid_step_no_run.yml  invalid_step_whitespace_id.yml  invalid_yaml_syntax.yml  minimal_command.yml  valid_auto_input_env.yml  valid_auto_input_env_windows.yml  valid_bool_input.yml  valid_choice_input.yml  valid_command.yml  valid_env_vars.yml  valid_env_vars_windows.yml  valid_input_resolution.yml  valid_input_resolution_windows.yml  valid_multi_step.yml  valid_no_inputs.yml  valid_required_input.yml  valid_required_input_with_default.yml  valid_script.yml  valid_script_auto_inputs.yml  valid_script_auto_inputs_windows.yml  valid_script_env.yml  valid_script_env_windows.yml  valid_script_windows.yml  valid_secret_input.yml  valid_step_exit_code.yml  valid_step_failure.yml  valid_step_working_dir.yml  valid_step_working_dir_windows.yml  valid_warn_unknown_input.yml  valid_warn_unset_env.yml  (+2 more)
