# Package
[package]
name = "mici"
version = "0.1.3"
edition = "2024"
license = "Apache-2.0"
description = "Lightweight CLI framework based on filesystem hierarchy"
authors = ["Oguzhan Ozdemir"]
exclude = [".*", "rfc/", "tests/"]
categories = [
    "command-line-utilities",
    "command-line-interface",
    "development-tools",
    "development-tools::build-utils",
]
keywords = ["cli", "ci", "framework"]
repository = "https://github.com/rwxdash/mici"

# Dependencies
[dependencies]
colored = "3.0.0"
dialoguer = "0.11.0"
dirs = "6.0.0"
fs_extra = "1.3.0"
getopts = "0.2.23"
git2 = "0.20.2"
handlebars = "6.3.2"
indoc = "2.0.6"
miette = { version = "7.6.0", features = ["fancy"] }
openssl = { version = "0.10.75", features = ["vendored"] }
regex = "1.11.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.142"
serde_yaml = "0.9"
thiserror = "2.0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "ansi",
] }

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"
tempfile = "3.10"

[target.'cfg(not(target_os = "windows"))'.dependencies]
pager = "0.16.1"
